output/lispioninhaS_orientadaParser.java
// $ANTLR 3.5.1 /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g 2017-05-01 19:38:18

	package Map;
	import java.util.HashMap;
	import java.util.ArrayList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
@SuppressWarnings("all")
public class lispioninhaS_orientadaParser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COND", "DEFUN", "DIFERENTE", 
		"DIVIDE", "ID", "IGUAL", "MAIOR", "MAIORIGUAL", "MAIS", "MENOR", "MENORIGUAL", 
		"MENOS", "NIL", "NUMERO", "PAR_DIR", "PAR_ESQ", "SETQ", "T", "VEZES", 
		"WS"
	};
	public static final int EOF=-1;
	public static final int COND=4;
	public static final int DEFUN=5;
	public static final int DIFERENTE=6;
	public static final int DIVIDE=7;
	public static final int ID=8;
	public static final int IGUAL=9;
	public static final int MAIOR=10;
	public static final int MAIORIGUAL=11;
	public static final int MAIS=12;
	public static final int MENOR=13;
	public static final int MENORIGUAL=14;
	public static final int MENOS=15;
	public static final int NIL=16;
	public static final int NUMERO=17;
	public static final int PAR_DIR=18;
	public static final int PAR_ESQ=19;
	public static final int SETQ=20;
	public static final int T=21;
	public static final int VEZES=22;
	public static final int WS=23;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "lista_parametros", "lista_args", "corpo", "regra", "decisao", 
		"declara_fun", "prog", "expr", "termo", "chamada", "identifica", "teste"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, false, false, false, false, false, 
		    false, false, false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public lispioninhaS_orientadaParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public lispioninhaS_orientadaParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this, port, null);

		setDebugListener(proxy);
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
	}

	public lispioninhaS_orientadaParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg, new RecognizerSharedState());
	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

	@Override public String[] getTokenNames() { return lispioninhaS_orientadaParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g"; }


		public class Atrib {
			public double valor;
			public ArrayList<String> param;
			public ArrayList<String> corpo;
			public Atrib(double v) { // VARIAVEL
				valor = v; param = null; corpo = null;
			} 
			public Atrib(ArrayList<String> p, ArrayList<String> c) { // FUNCAO
				valor = 0.0; param = p; corpo = c;
			} 
		}
		HashMap<String, Atrib> ts = new HashMap<String, Atrib>();
		boolean erroGeral = false;



	// $ANTLR start "prog"
	// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:23:1: prog : ( declara_fun | identifica )+ ;
	public final void prog() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "prog");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(23, 0);

		try {
			// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:23:7: ( ( declara_fun | identifica )+ )
			dbg.enterAlt(1);

			// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:24:2: ( declara_fun | identifica )+
			{
			dbg.location(24,2);
			// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:24:2: ( declara_fun | identifica )+
			int cnt1=0;
			try { dbg.enterSubRule(1);

			loop1:
			while (true) {
				int alt1=3;
				try { dbg.enterDecision(1, decisionCanBacktrack[1]);

				int LA1_0 = input.LA(1);
				if ( (LA1_0==PAR_ESQ) ) {
					int LA1_2 = input.LA(2);
					if ( (LA1_2==DEFUN) ) {
						alt1=1;
					}
					else if ( (LA1_2==SETQ) ) {
						alt1=2;
					}

				}

				} finally {dbg.exitDecision(1);}

				switch (alt1) {
				case 1 :
					dbg.enterAlt(1);

					// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:25:2: declara_fun
					{
					dbg.location(25,2);
					pushFollow(FOLLOW_declara_fun_in_prog26);
					declara_fun();
					state._fsp--;

					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:27:2: identifica
					{
					dbg.location(27,2);
					pushFollow(FOLLOW_identifica_in_prog32);
					identifica();
					state._fsp--;

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					dbg.recognitionException(eee);

					throw eee;
				}
				cnt1++;
			}
			} finally {dbg.exitSubRule(1);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(29, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "prog");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "prog"



	// $ANTLR start "declara_fun"
	// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:30:1: declara_fun : PAR_ESQ DEFUN ID PAR_ESQ ( lista_parametros )? PAR_DIR corpo PAR_DIR ;
	public final void declara_fun() throws RecognitionException {
		Token ID2=null;
		ArrayList<String> lista_parametros1 =null;
		ArrayList<String> corpo3 =null;

		try { dbg.enterRule(getGrammarFileName(), "declara_fun");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(30, 0);

		try {
			// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:31:2: ( PAR_ESQ DEFUN ID PAR_ESQ ( lista_parametros )? PAR_DIR corpo PAR_DIR )
			dbg.enterAlt(1);

			// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:31:4: PAR_ESQ DEFUN ID PAR_ESQ ( lista_parametros )? PAR_DIR corpo PAR_DIR
			{
			dbg.location(31,4);
			match(input,PAR_ESQ,FOLLOW_PAR_ESQ_in_declara_fun47); dbg.location(32,2);
			match(input,DEFUN,FOLLOW_DEFUN_in_declara_fun51); dbg.location(32,8);
			ID2=(Token)match(input,ID,FOLLOW_ID_in_declara_fun53); dbg.location(33,2);
			 ArrayList<String> lP = null; dbg.location(34,2);
			match(input,PAR_ESQ,FOLLOW_PAR_ESQ_in_declara_fun59); dbg.location(35,2);
			// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:35:2: ( lista_parametros )?
			int alt2=2;
			try { dbg.enterSubRule(2);
			try { dbg.enterDecision(2, decisionCanBacktrack[2]);

			int LA2_0 = input.LA(1);
			if ( (LA2_0==ID) ) {
				alt2=1;
			}
			} finally {dbg.exitDecision(2);}

			switch (alt2) {
				case 1 :
					dbg.enterAlt(1);

					// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:36:2: lista_parametros
					{
					dbg.location(36,2);
					pushFollow(FOLLOW_lista_parametros_in_declara_fun66);
					lista_parametros1=lista_parametros();
					state._fsp--;
					dbg.location(36,19);
					lP = lista_parametros1;
					}
					break;

			}
			} finally {dbg.exitSubRule(2);}
			dbg.location(38,2);
			match(input,PAR_DIR,FOLLOW_PAR_DIR_in_declara_fun76); dbg.location(39,2);
			pushFollow(FOLLOW_corpo_in_declara_fun80);
			corpo3=corpo();
			state._fsp--;
			dbg.location(39,8);
			 
					if (!ts.containsKey((ID2!=null?ID2.getText():null))) {
						ts.put((ID2!=null?ID2.getText():null),new Atrib(lP,corpo3)); 
					}
					else {
			           		Atrib atb = ts.get((ID2!=null?ID2.getText():null));
						if (atb.corpo == null) { // NAO ERA FUNCAO
				           		atb.valor = 0.0;
			        	   		atb.param = lP;
			           			atb.corpo = corpo3;
			           		}
						else {			
				           		erroGeral = true;
				 			System.err.println("Erro em " + ID2.getLine() + ":"
				  	        	+ ID2.getCharPositionInLine() 
				  	        	+ " - Tentativa de redefinir funcao " + (ID2!=null?ID2.getText():null)); 
						}
					}
				dbg.location(58,2);
			match(input,PAR_DIR,FOLLOW_PAR_DIR_in_declara_fun85); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(59, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "declara_fun");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "declara_fun"



	// $ANTLR start "identifica"
	// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:60:1: identifica : PAR_ESQ SETQ ID termo PAR_DIR ;
	public final void identifica() throws RecognitionException {
		Token ID4=null;
		double termo5 =0.0;

		try { dbg.enterRule(getGrammarFileName(), "identifica");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(60, 0);

		try {
			// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:61:2: ( PAR_ESQ SETQ ID termo PAR_DIR )
			dbg.enterAlt(1);

			// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:61:4: PAR_ESQ SETQ ID termo PAR_DIR
			{
			dbg.location(61,4);
			match(input,PAR_ESQ,FOLLOW_PAR_ESQ_in_identifica95); dbg.location(61,12);
			match(input,SETQ,FOLLOW_SETQ_in_identifica97); dbg.location(62,2);
			ID4=(Token)match(input,ID,FOLLOW_ID_in_identifica101); dbg.location(63,2);
			pushFollow(FOLLOW_termo_in_identifica105);
			termo5=termo();
			state._fsp--;
			dbg.location(64,2);

					if (!ts.containsKey((ID4!=null?ID4.getText():null))) {
						ts.put((ID4!=null?ID4.getText():null),new Atrib(termo5)); 
					}
					else { // VALE A IDENTIFICACAO ATUAL
					     	Atrib atb = ts.get((ID4!=null?ID4.getText():null));
			           		atb.valor = termo5;
			       	   		atb.param = null;
			       			atb.corpo = null;
			       		}
				dbg.location(75,2);
			match(input,PAR_DIR,FOLLOW_PAR_DIR_in_identifica112); dbg.location(76,2);

					if (!erroGeral) System.out.println((ID4!=null?ID4.getText():null) + " = " + termo5);
				
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(79, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "identifica");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "identifica"



	// $ANTLR start "lista_parametros"
	// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:80:1: lista_parametros returns [ArrayList<String> listaP] :id1= ID (id2= ID )? ;
	public final ArrayList<String> lista_parametros() throws RecognitionException {
		ArrayList<String> listaP = null;


		Token id1=null;
		Token id2=null;

		try { dbg.enterRule(getGrammarFileName(), "lista_parametros");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(80, 0);

		try {
			// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:81:2: (id1= ID (id2= ID )? )
			dbg.enterAlt(1);

			// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:81:4: id1= ID (id2= ID )?
			{
			dbg.location(81,4);
			 listaP = new ArrayList<String>(); dbg.location(82,5);
			id1=(Token)match(input,ID,FOLLOW_ID_in_lista_parametros136); dbg.location(82,9);

					//adiciona id1 em listaP} -- FEITO
					listaP.add((id1!=null?id1.getText():null));
				dbg.location(86,2);
			// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:86:2: (id2= ID )?
			int alt3=2;
			try { dbg.enterSubRule(3);
			try { dbg.enterDecision(3, decisionCanBacktrack[3]);

			int LA3_0 = input.LA(1);
			if ( (LA3_0==ID) ) {
				alt3=1;
			}
			} finally {dbg.exitDecision(3);}

			switch (alt3) {
				case 1 :
					dbg.enterAlt(1);

					// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:87:2: id2= ID
					{
					dbg.location(87,5);
					id2=(Token)match(input,ID,FOLLOW_ID_in_lista_parametros147); dbg.location(87,9);

							//adiciona id2 em listaP} -- FEITO
							listaP.add((id2!=null?id2.getText():null));
						
					}
					break;

			}
			} finally {dbg.exitSubRule(3);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(92, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "lista_parametros");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return listaP;
	}
	// $ANTLR end "lista_parametros"



	// $ANTLR start "lista_args"
	// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:93:1: lista_args returns [ArrayList<Double> listaA] :t1= termo (t2= termo )? ;
	public final ArrayList<Double> lista_args() throws RecognitionException {
		ArrayList<Double> listaA = null;


		double t1 =0.0;
		double t2 =0.0;

		try { dbg.enterRule(getGrammarFileName(), "lista_args");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(93, 0);

		try {
			// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:94:2: (t1= termo (t2= termo )? )
			dbg.enterAlt(1);

			// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:94:5: t1= termo (t2= termo )?
			{
			dbg.location(94,5);
			 listaA = new ArrayList<Double>(); dbg.location(95,4);
			pushFollow(FOLLOW_termo_in_lista_args173);
			t1=termo();
			state._fsp--;
			dbg.location(95,11);

					//adiciona valor de t1 em listaA} -- FEITO
					listaA.add( t1 );
				dbg.location(99,2);
			// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:99:2: (t2= termo )?
			int alt4=2;
			try { dbg.enterSubRule(4);
			try { dbg.enterDecision(4, decisionCanBacktrack[4]);

			int LA4_0 = input.LA(1);
			if ( (LA4_0==ID||LA4_0==NUMERO||LA4_0==PAR_ESQ) ) {
				alt4=1;
			}
			} finally {dbg.exitDecision(4);}

			switch (alt4) {
				case 1 :
					dbg.enterAlt(1);

					// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:100:2: t2= termo
					{
					dbg.location(100,4);
					pushFollow(FOLLOW_termo_in_lista_args184);
					t2=termo();
					state._fsp--;
					dbg.location(100,11);

							//adiciona valor de t1 em listaA} -- FEITO
							listaA.add(t2);
						
					}
					break;

			}
			} finally {dbg.exitSubRule(4);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(105, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "lista_args");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return listaA;
	}
	// $ANTLR end "lista_args"



	// $ANTLR start "termo"
	// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:106:1: termo returns [double v] : ( ID |ch= chamada |de= decisao | NUMERO |ex= expr );
	public final double termo() throws RecognitionException {
		double v = 0.0;


		Token ID6=null;
		Token NUMERO7=null;
		double ch =0.0;
		double de =0.0;
		double ex =0.0;

		try { dbg.enterRule(getGrammarFileName(), "termo");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(106, 0);

		try {
			// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:107:2: ( ID |ch= chamada |de= decisao | NUMERO |ex= expr )
			int alt5=5;
			try { dbg.enterDecision(5, decisionCanBacktrack[5]);

			switch ( input.LA(1) ) {
			case ID:
				{
				alt5=1;
				}
				break;
			case PAR_ESQ:
				{
				switch ( input.LA(2) ) {
				case ID:
					{
					alt5=2;
					}
					break;
				case COND:
					{
					alt5=3;
					}
					break;
				case DIVIDE:
				case MAIS:
				case MENOS:
				case VEZES:
					{
					alt5=5;
					}
					break;
				default:
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 5, 2, input);
						dbg.recognitionException(nvae);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}
				}
				break;
			case NUMERO:
				{
				alt5=4;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}
			} finally {dbg.exitDecision(5);}

			switch (alt5) {
				case 1 :
					dbg.enterAlt(1);

					// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:108:2: ID
					{
					dbg.location(108,2);
					ID6=(Token)match(input,ID,FOLLOW_ID_in_termo206); dbg.location(109,9);
					 
					           	v = 0.0;  
					           	
					           	//se ID esta' em ts -- FEITO
							//v = valor de ID informado em ts -- FEITO
							//senao acusa erroGeral e informa variavel nao declarada -- FEITO
					           	if (ts.containsKey((ID6!=null?ID6.getText():null))){
					           		v = ts.get((ID6!=null?ID6.getText():null)).valor;
					           	}
					           	else{
					           		erroGeral = true;
					           		System.out.println ("Erro de variavel nao declarada");
					           	}
								
					        
					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// /home/gian/Programs/Antlrworks/trabalho/lispioninha/lispioninhaS_orientada.g:124:4: ch= chamada
					{
					dbg.location(124,7);
					pushFollow(FOLLOW_chamada_in_termo226);
					ch=chamada();
					state._fsp--;
					dbg.location(124,17);

							//v = valor da chamada -- FEITO
							v = ch; 
						
					}
					break;
				case 3 :
					dbg.enterAlt(3);
